<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/centerLayout"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">

    <LinearLayout
        style="@style/centerLayout"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imgV" />

        <LinearLayout
            android:orientation="vertical"
            style="@style/centerLayout"
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/txtVName"
                android:textAlignment="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:id="@+id/txtVDist"
                android:textColor="#ff000fff" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        style="@style/centerLayout">

        <Button
            style="@style/fragDetailsBtn"
            android:text="@string/btnBm"
            android:id="@+id/btnBm" />

        <Button
            style="@style/fragDetailsBtn"
            android:text="@string/btnM"
            android:id="@+id/btnMap"/>

        <Button
            style="@style/fragDetailsBtn"
            android:text="@string/btnS"
            android:id="@+id/btnS" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
       style="@style/centerLayout">

        <Button
            style="@style/fragDetailsBtn"
            android:text="@string/btnB"
            android:id="@+id/btnB"
            android:enabled="false" />

        <Button
            style="@style/fragDetailsBtn"
            android:text="@string/btnF"
            android:id="@+id/btnF"
            android:enabled="false"/>

        <Button
            style="@style/fragDetailsBtn"
            android:text="@string/btnP"
            android:id="@+id/btnP"
            android:enabled="false"/>

    </LinearLayout>

    <TextView
        style="@style/label"
        android:text="@string/addrLbl"
        android:id="@+id/txtVLblAddr" />

    <TextView
        android:id="@+id/txtVAddr"
        style="@style/content" />

    <TextView
        android:text="@string/txtP"
        android:id="@+id/txtVLblPhone"
        style="@style/label"
        />

    <TextView
        android:id="@+id/txtVPhone"
        style="@style/content" />

    <TextView
        android:text="@string/txtT"
        android:id="@+id/txtVLblTime"
        style="@style/label" />

    <TextView
        android:id="@+id/txtVTime"
        style="@style/content" />

    <TextView
        android:text="@string/txtW"
        android:id="@+id/txtVLblWeb"
        style="@style/label" />

    <TextView
        android:id="@+id/txtVWeb"
        style="@style/content" />

    <Button
        style="@style/fragDetailsBtn"
        android:text="@string/ok"
        android:id="@+id/btnOK" />

</LinearLayout>